force-app/main/default/objects/DocumentChecklistItem/fields/Compressed_File_Size__c.field-meta.xml
<CustomField>
    <fullName>Compressed_File_Size__c</fullName>
    <label>Compressed File Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>