force-app/main/default/objects/DocumentChecklistItem/fields/Date_Dropped__c.field-meta.xml
<CustomField>
    <fullName>Date_Dropped__c</fullName>
    <label>Date Dropped</label>
    <type>DateTime</type>
</CustomField>