force-app/main/default/objects/DocumentChecklistItem/fields/Document_Link__c.field-meta.xml
<CustomField>
    <fullName>Document_Link__c</fullName>
    <label>Document Link</label>
    <type>Url</type>
</CustomField>