force-app/main/default/objects/DocumentChecklistItem/fields/File_Descriptor_Id__c.field-meta.xml
<CustomField>
    <fullName>File_Descriptor_Id__c</fullName>
    <label>File Descriptor Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>