force-app/main/default/objects/DocumentChecklistItem/fields/LastDownloadDate__c.field-meta.xml
<CustomField>
    <fullName>LastDownloadDate__c</fullName>
    <label>LastDownloadDate</label>
    <type>Date</type>
</CustomField>