force-app/main/default/objects/DocumentChecklistItem/fields/MarinerExternalID__c.field-meta.xml
<CustomField>
    <fullName>MarinerExternalID__c</fullName>
    <externalId>true</externalId>
    <label>MarinerExternalID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>